--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div onclick="openCart()" style="display: flex;align-items: center;margin-right: 2rem;cursor: pointer;">
-            <img src="/imgs/cart.svg">
+            <img src="cart.svg">
             <p>Cart</p>
         </div>
     </div>
